<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_request"
          android:title="@string/receive_now"
          android:icon="@drawable/icon_handshake"
          android:showAsAction="always" />
    
    <item android:id="@+id/action_scan"
          android:title="@string/scan_now"
          android:icon="@drawable/ic_action_camera"
          android:showAsAction="always" />
    
    <!-- 
    <item android:id="@+id/scan_response"
          android:title="@string/scan_response"
          android:icon="@drawable/ic_action_camera"
          android:showAsAction="ifRoom" />
     -->
    <item android:id="@+id/new_key"
          android:title="@string/new_key"
          android:icon="@drawable/ic_action_new"
          android:showAsAction="always" />

    <item android:id="@+id/refresh"
          android:title="@string/refresh"
          android:icon="@drawable/ic_action_refresh"
          android:showAsAction="always" />
    
     <item android:id="@+id/newpin"
          android:title="@string/newpin"
          android:icon="@drawable/ic_action_secure"
          android:showAsAction="always" />
    
</menu>

